--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -6,44 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="${pageTitle}"></title>
   <link rel="stylesheet" th:href="@{/css/home.css}">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" th:href="@{/}">Bug Tracker</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Issues</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Reports</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item" sec:authorize="isAuthenticated()">
-        <a class="nav-link" th:href="@{/profile}">User Profile</a>
-      </li>
-      <li class="nav-item" sec:authorize="isAnonymous()">
-        <a class="nav-link" th:href="@{/login}">Login/Register</a>
-      </li>
-      <li class="nav-item" sec:authorize="isAuthenticated()">
-        <form class="custom-form" method="post" th:action="@{/logout}">
-          <input type="submit" class="nav-link" value="Logout">
-        </form>
-      </li>
-    </ul>
+  <div class="container-fluid">
+    <a class="navbar-brand" th:href="@{/}">Bug Tracker</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" th:href="@{/}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Issues</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Reports</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+          <a class="nav-link" th:href="@{/profile}">User Profile</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAnonymous()">
+          <a class="nav-link" th:href="@{/login}">Login/Register</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+          <form class="custom-form" method="post" th:action="@{/logout}">
+            <input type="submit" class="nav-link" value="Logout">
+          </form>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
