--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,40 +1,39 @@
 <!-- Include the header -->
 <div th:insert="~{includes/header.html}" th:with="pageTitle='Sign Up'"></div>
 
-<!-- Main content of the page -->
 <div class="container mt-4">
     <h2>Register</h2>
     <form th:action="@{/process_register}" th:object="${user}" method="post" onsubmit="return validateForm()">
         <!---Error Message---->
-        <p class="error" id="error-message" th:if="${errorMessage}"  th:text="${errorMessage}"></p>
+        <p class="error" id="error-message" th:if="${errorMessage}" th:text="${errorMessage}"></p>
 
         <!---First Name---->
-        <div class="form-group" data-validate="Name is required">
-            <label for="firstName">First Name</label>
+        <div class="mb-3" data-validate="Name is required">
+            <label for="firstName" class="form-label">First Name</label>
             <input type="text" class="form-control" id="firstName" name="firstName" th:field="*{firstName}" placeholder="First Name" required>
         </div>
 
         <!---Last Name---->
-        <div class="form-group" data-validate="Name is required">
-            <label for="lastName">Last Name</label>
+        <div class="mb-3" data-validate="Name is required">
+            <label for="lastName" class="form-label">Last Name</label>
             <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}" placeholder="Last Name" required>
         </div>
 
         <!---Email---->
-        <div class="form-group" data-validate="Valid email is required: ex@abc.xyz">
-            <label for="email">Email</label>
+        <div class="mb-3" data-validate="Valid email is required: ex@abc.xyz">
+            <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email" th:field="*{email}" placeholder="sample@example.com" required>
         </div>
 
         <!---Password---->
-        <div class="form-group" data-validate="Valid password is required">
-            <label for="password">Password</label>
+        <div class="mb-3" data-validate="Valid password is required">
+            <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Password" required>
         </div>
 
         <!---Password Confirmation---->
-        <div class="form-group" data-validate="Valid password is required">
-            <label>Confirm Password</label>
+        <div class="mb-3" data-validate="Valid password is required">
+            <label for="confirm-password" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" id="confirm-password" name="confirmPassword" placeholder="Confirm your password" required>
         </div>
 
@@ -43,6 +42,7 @@
     <br>
     <p>Already have an account? <a th:href="@{/login}">Login here.</a></p>
 </div>
+
 
 <!-- Include the footer -->
 <div th:insert="~{includes/footer.html}"></div>
