Created Admin user controller, displaying user details, allowing admin to edit user roles.

--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -21,7 +21,7 @@
     </div>
     <ul class="nav_list">
         <li>
-            <a href="#">
+            <a th:href="@{/admin}" href="#">
                 <i class='bx bx-grid-alt'></i>
                 <span class="links_name">Dashboard</span>
             </a>
@@ -42,7 +42,7 @@
             <span class="tooltip">Messages</span>
         </li>
         <li>
-            <a href="#">
+            <a th:href="@{/admin/user}" href="#">
                 <i class='bx bx-user'></i>
                 <span class="links_name">Users</span>
             </a>
