--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -38,7 +38,9 @@
             <div class="title">Due in 7 Days</div>
         </div>
     </div>
+
     <div class="section-line"></div>
+
     <div class="bug-table">
         <div class="bug-table-headings">
             <div class="bug-heading">BUG</div>
@@ -72,4 +74,4 @@
 </section>
 
 <!-- Include the footer -->
-<div th:insert="~{admin/includes/footer.html}"></div>
+<div th:replace="~{admin/includes/footer.html}"></div>
