--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -295,13 +295,13 @@ body {
     margin-top: 10px;
 }
 
-/* Table CSS */
-
 .section-line {
     border-bottom: 1px solid #ccc;
     margin-top: 20px;
     margin-left: 20px; /* Adjust the margin-left to match the distance from the sidebar */
 }
+
+/* BUG TABLE CSS */
 
 .bug-table {
     margin-top: 20px;
@@ -363,4 +363,111 @@ body {
 .bug-cell {
     flex: 1;
     padding: 5px;
+}
+
+/* GENERAL TABLE CSS */
+
+.custom-table {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    overflow-x: auto; /* Enable horizontal scrolling if needed */
+}
+
+.custom-table-headings {
+    display: flex;
+    align-items: center;
+    height: 50px;
+}
+
+.custom-heading {
+    flex: 1;
+    padding: 5px;
+    white-space: nowrap; /* Prevent heading text from wrapping */
+    overflow: hidden; /* Hide any overflowing text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for truncated text */
+}
+
+.custom-row {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    border-bottom: 1px solid #ccc;
+    transition: all 0.5s ease;
+}
+
+.custom-row:hover {
+    background-color: #f1f1f1;
+}
+
+.custom-cell {
+    flex: 1;
+    padding: 5px;
+    white-space: nowrap; /* Prevent cell text from wrapping */
+    overflow: hidden; /* Hide any overflowing text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for truncated text */
+}
+
+/* Profile Section Styles */
+.profile-card {
+    width: 400px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+}
+
+.profile-photo img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border: 2px solid #fff; /* Add this line */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add this line for a subtle shadow */
+}
+
+.profile-details {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.detail {
+    display: flex;
+    align-items: center;
+}
+
+.detail label {
+    flex-basis: 120px;
+}
+
+.detail input {
+    flex-grow: 1;
+    padding: 5px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.save-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #111738;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    width: 100%;
+}
+
+.save-button:hover {
+    background-color: #19215d;
+    transform: scale(1.05);
 }
