--- a/src/main/resources/templates/admin/includes/footer.html
+++ b/src/main/resources/templates/admin/includes/footer.html
@@ -1,3 +1,5 @@
+</section>
+
 <!-- JavaScript files -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 <script th:src="@{/js/admin.js}"></script>
