--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,24 +1,24 @@
 <!-- Include the sidebar -->
 <div th:replace="~{admin/includes/sidebar.html}"></div>
 
-    <div class="cards-section">
-        <div class="card">
+    <div class="bug-cards-section">
+        <div class="bug-card">
             <div class="number">50</div>
             <div class="title">Total Bugs</div>
         </div>
-        <div class="card">
+        <div class="bug-card">
             <div class="number">20</div>
             <div class="title">Open Bugs</div>
         </div>
-        <div class="card">
+        <div class="bug-card">
             <div class="number">30</div>
             <div class="title">Closed Bugs</div>
         </div>
-        <div class="card">
+        <div class="bug-card">
             <div class="number">15</div>
             <div class="title">Due Today</div>
         </div>
-        <div class="card">
+        <div class="bug-card">
             <div class="number">12</div>
             <div class="title">Due in 7 Days</div>
         </div>
