--- a/src/main/resources/templates/admin/project/project.html
+++ b/src/main/resources/templates/admin/project/project.html
@@ -9,20 +9,35 @@
 <div class="bug-table">
     <div class="bug-table-headings">
         <div class="bug-heading">PROJECT</div>
+        <div class="bug-heading">PRIORITY</div>
         <div class="bug-heading">STATUS</div>
         <div class="bug-heading">STARTED</div>
         <div class="bug-heading">DUE</div>
         <div class="bug-heading">MANAGER</div>
-        <div class="bug-heading">VIEW</div>
+        <div class="bug-heading">ACTIONS</div>
     </div>
         <div class="bug-row" th:each="project : ${projects}">
             <div class="bug-cell" th:text="${project.name}"></div>
+            <div class="bug-cell" th:text="${project.priority}"></div>
             <div class="bug-cell" th:text="${project.status}"></div>
             <div class="bug-cell" th:text="${project.startDate}"></div>
             <div class="bug-cell" th:text="${project.endDate}"></div>
             <div class="bug-cell" th:text="${project.projectManager}"></div>
             <div class="bug-cell">
-                <a class="btn btn-info" th:href="@{/admin/project/edit/{id}(id=${project.id})}">View</a>
+                <a th:href="@{/admin/project/view/{id}(id=${project.id})}">
+                    <i class='bx bx-show'></i>
+                </a>
+
+                <a th:href="@{/admin/project/edit/{id}(id=${project.id})}">
+                    <i class='bx bx-edit'></i>
+                </a>
+
+                <form th:action="@{/admin/project/__${project.id}__}" method="post">
+                    <input type="hidden" name="_method" value="DELETE" />
+                    <button type="submit" onclick="return confirm('Are you sure you want to delete this category?')">
+                        <i class='bx bx-trash'></i>
+                    </button>
+                </form>
             </div>
         </div>
 </div>
