--- a/src/main/resources/templates/admin/project/update_project.html
+++ b/src/main/resources/templates/admin/project/update_project.html
@@ -16,13 +16,14 @@
 
             <div class="form-group">
                 <label for="start-date">Start Date:</label>
-                <input type="date" id="start-date" name="start-date" th:field="*{startDate}" required>
+                <input type="date" id="start-date" name="start-date" th:field="*{startDate}" th:format="${#dates.format(startDate, 'yyyy-MM-dd')}" required>
             </div>
 
             <div class="form-group">
                 <label for="end-date">End Date:</label>
-                <input type="date" id="end-date" name="end-date" th:field="*{endDate}" required>
+                <input type="date" id="end-date" name="end-date" th:field="*{endDate}" th:format="${#dates.format(endDate, 'yyyy-MM-dd')}" required>
             </div>
+
 
             <div class="form-group">
                 <label for="priority">Priority:</label>
@@ -48,6 +49,15 @@
                 </select>
             </div>
 
+            <div class="form-group">
+                <label for="associated-users">Developers:</label>
+                <select id="associated-users" name="associatedUsers" multiple="multiple">
+                    <option th:each="developer : ${developers}" th:value="${developer.id}"
+                            th:selected="${project.associatedUsers.contains(developer)}"
+                            th:text="${developer.firstName} + ' ' + ${developer.lastName}">
+                    </option>
+                </select>
+            </div>
 
             <div class="form-group">
                 <button type="submit">Update Project</button>
