--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -66,7 +66,7 @@
     <div class="heading-section">
         <span th:text="${pageTitle}"></span>
         <div class="icons-section">
-            <a href="#" class="submit-bug-button">
+            <a th:href="@{/admin/bug/submit}" class="submit-bug-button">
                 Submit Bug
             </a>
             <span class="notification-icon">
