created bug details page - each bug now has its own page for further details including screenshots.

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -599,6 +599,17 @@ body {
     padding-left: 20px;
 }
 
+/* Bug screenshots */
+.screenshots-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.screenshots-container img {
+    max-width: 230px;
+    margin-right: 10px;
+    object-fit: contain;
+}
 
 
 
