--- a/src/main/resources/templates/admin/project/project_detail.html
+++ b/src/main/resources/templates/admin/project/project_detail.html
@@ -48,6 +48,8 @@
             <div class="bug-heading">CREATED</div>
             <div class="bug-heading">DUE</div>
             <div class="bug-heading">REPORTER</div>
+            <div class="bug-heading">Assigned User</div>
+            <div class="bug-heading">Actions</div>
         </div>
         <div class="bug-row" th:each="bug : ${project.bugs}">
             <div class="bug-cell" th:text="${bug.title}"></div>
@@ -56,6 +58,16 @@
             <div class="bug-cell" th:text="${bug.created}"></div>
             <div class="bug-cell" th:text="${bug.due}"></div>
             <div class="bug-cell" th:text="${bug.postedBy}"></div>
+            <div class="bug-cell">null</div>
+            <div class="bug-cell">
+                <a th:href="@{/admin/bug/view/{id}(id=${bug.id})}">
+                    <i class='bx bx-show'></i>
+                </a>
+
+                <a th:href="@{/admin/bug/edit/{id}(id=${bug.id})}">
+                    <i class='bx bx-edit'></i>
+                </a>
+            </div>
         </div>
     </div>
 </div>
