User can now visit their profile page and edit details such as their profile image.

--- a/src/main/resources/templates/admin/user/edit_user.html
+++ b/src/main/resources/templates/admin/user/edit_user.html
@@ -4,7 +4,7 @@
     <form th:action="@{/admin/user/save}" th:object="${user}" method="post">
         <div class="profile-card">
             <div class="profile-photo">
-                <img th:src="@{/img/1516938018965.jpg}" alt="Profile Photo">
+                <img th:src="@{profileimg}" alt="Profile Photo">
             </div>
 
             <div class="profile-details">
