--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,5 +1,18 @@
 /* ---- CSS for Home Page ---- */
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
 /* CSS for home navbar and logout button */
 
 .custom-form {
@@ -13,4 +26,98 @@
     color: #fff;
     text-decoration: none;
     cursor: pointer;
+}
+/* CSS for profile page */
+
+.profile-container {
+    position: relative;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.profile-image-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 0 auto;
+    transition: transform 0.3s ease;
+}
+
+.profile-image-container:hover {
+    transform: scale(1.1);
+}
+
+.profile-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.change-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.change-icon i {
+    color: #000;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.action-icons {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    font-size: 25px;
+}
+
+.sidebar {
+    margin-top: 25px;
+}
+
+.sidebar .list-group-item {
+    display: block;
+}
+
+.sidebar .list-group-item a {
+    display: block;
+    color: #000;
+    text-decoration: none;
+}
+
+.profile-details {
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.profile-details input.form-control {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+}
+.profile-details label {
+    font-weight: bold;
+}
+.profile-details button[type="submit"] {
+    margin-top: 20px;
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+.profile-details button[type="submit"]:hover {
+    background-color: #0056b3;
 }
