improved status UI

--- a/src/main/resources/templates/admin/project/add_project.html
+++ b/src/main/resources/templates/admin/project/add_project.html
@@ -35,7 +35,7 @@
             <div class="form-group">
                 <label for="status">Status:</label>
                 <select id="status" name="status" th:field="*{status}" required>
-                    <option value="In-progress">In Progress</option>
+                    <option value="In-Progress">In Progress</option>
                     <option value="Completed">Completed</option>
                 </select>
             </div>
