--- a/src/main/resources/templates/admin/bug/submit_bug.html
+++ b/src/main/resources/templates/admin/bug/submit_bug.html
@@ -46,7 +46,7 @@
                 <label for="status">Status:</label>
                 <select id="status" name="status" th:field="*{status}" required>
                     <option value="New">New</option>
-                    <option value="In-progress">In Progress</option>
+                    <option value="In-Progress">In Progress</option>
                     <option value="Resolved">Resolved</option>
                     <option value="Closed">Closed</option>
                 </select>
