--- a/src/main/resources/templates/includes/footer.html
+++ b/src/main/resources/templates/includes/footer.html
@@ -1,12 +1,10 @@
-<footer class="footer mt-4">
+<footer class=" text-center py-3">
   <div class="container">
-    <div class="row">
-      <div class="col text-center">
-        <p>&copy; 2023 Bug Tracker. All rights reserved.</p>
-      </div>
-    </div>
+    <br>
+    <p>&copy; 2023 Bug Tracker. All rights reserved.</p>
   </div>
 </footer>
+
 
 <!-- JavaScript files -->
 <script th:src="@{/js/home.js}"></script>
