--- a/src/main/resources/templates/admin/project/update_project.html
+++ b/src/main/resources/templates/admin/project/update_project.html
@@ -28,17 +28,17 @@
             <div class="form-group">
                 <label for="priority">Priority:</label>
                 <select id="priority" name="priority" th:field="*{priority}" required>
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="status">Status:</label>
                 <select id="status" name="status" th:field="*{status}" required>
-                    <option value="in-progress">In Progress</option>
-                    <option value="completed">Completed</option>
+                    <option value="In-Progress">In Progress</option>
+                    <option value="Completed">Completed</option>
                 </select>
             </div>
 
