Developers can now access their profile page from developer dashboard, fixed issue with admin updating user details - image would reset.

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -208,6 +208,8 @@ body {
     margin-right: 10px;
     position: relative;
     font-size: 28px;
+    text-decoration: none;
+    color: black;
 }
 
 .notification-count {
