--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -73,8 +73,8 @@
             <i class="bx bx-bell"></i>
             <span class="notification-count">5</span>
         </span>
-            <span class="profile-icon">
-            <i class="bx bx-user"></i>
-        </span>
+            <a th:href="@{/admin/profile}" class="profile-icon">
+                <i class="bx bx-user"></i>
+            </a>
         </div>
     </div>
