Created a notification system. Project Managers, Developers are now notified if they are assigned or removed from a project or task. Users are also notified if they have been given or lost a role. Notification count is now displayed for unread messages.

--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -71,7 +71,7 @@
             </a>
             <span class="notification-icon">
             <i class="bx bx-bell"></i>
-            <span class="notification-count">5</span>
+            <span class="notification-count" th:text="${notificationCount}"></span>
         </span>
             <a th:href="@{/admin/profile}" class="profile-icon">
                 <i class="bx bx-user"></i>
